--- a/PT/Template/elaxi-html/index.html
+++ b/PT/Template/elaxi-html/index.html
@@ -119,9 +119,7 @@
                   <div class="col-md-6">
                     <div class="img-box">
                       <img src="images/slider-img.png" alt="">
-                    </div>
-                  </div>
-                </div>
+                    </div>                </div>
               </div>
             </div>
             <div class="carousel-item ">
